# citra

./: .gitmodules
src/: CMakeLists.txt
src/citra_qt/: game_list.cpp  main.cpp
src/common/: CMakeLists.txt  common_types.h  file_util.h  printable.h  result.h  string_util.cpp  string_util.h
src/common/logging/: backend_spdlog.cpp  backend_spdlog.h  formatter.cpp  formatter.h  log.h
src/core/: CMakeLists.txt
src/core/file_sys/: archive_ncch.h  archive_sdmc.cpp  archive_selfncch.cpp  disk_archive.cpp  disk_archive.h  file_backend.h  ivfc_archive.h
src/core/hle/: result.h
src/core/hle/service/am/: am.cpp  am.h
src/core/loader/: ncch.cpp
src/tests/: CMakeLists.txt
src/tests/vfs/: memory_file.cpp  subrange_file.cpp
src/vfs/: CMakeLists.txt  directory.h  file.h  filesystem.h  host_file.cpp  host_file.h  host_filesystem.cpp  host_filesystem.h  memory_file.cpp  memory_file.h  path.cpp  path.h  random_access_adapter.cpp  random_access_adapter.h  subrange_file.cpp  subrange_file.h  vfs.cpp  vfs.h
