# Enable modules to include each other's files
include_directories(.)

add_subdirectory(audio_core)
add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(input_common)
add_subdirectory(network)
add_subdirectory(tests)
add_subdirectory(vfs)
add_subdirectory(video_core)

if (ENABLE_SDL2)
    add_subdirectory(citra)
endif()
if (ENABLE_QT)
    add_subdirectory(citra_qt)
endif()
if (ENABLE_WEB_SERVICE)
    add_subdirectory(web_service)
endif()
